[tool.poetry]
name = "perspectra"
version = "0.1.0"
description = "Automatically extract documents from images and perspectively correct them"
authors = ["Adrian Sieber <mail@adriansieber.com>"]
license = "ISC"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.3"
numpy = "~1.24.3"
scikit-image = "~0.20.0"
scikit-learn = "~1.2.2"
matplotlib = "~3.7.1"
imageio = "~2.28.1"

[tool.poetry.group.dev.dependencies]
black = "~23.3.0"
jupyterlab-code-formatter = "~1.6.1"
mypy = "~1.2.0"
nuitka = "~1.5.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
