[project]
name = "perspectra"
version = "0.2.1"
description = "Automatically extract and perspectively correct documents in images"
readme = "readme.md"
requires-python = ">=3.12"
license = { text = "ISC" }
authors = [{ name = "Adrian Sieber", email = "mail@adriansieber.com" }]
keywords = ["document scanner", "perspective transformation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
urls = { "Homepage" = "http://github.com/ad-si/Perspectra" }
dependencies = [
    "imageio>=2.36.0",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "packaging>=24.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "scikit-image>=0.24.0",
]
scripts = { perspectra = "perspectra:main" }

[dependency-groups]
dev = ["marimo>=0.9.20", "pytest>=8.3.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["app/", "chaiNNer/", "jxa/"]
